plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.91'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = "https://api.modrinth.com/maven"
    }
    maven {
        url = "https://cursemaven.com"
    }
}

base {
    archivesName = mod_id
}

// Mojang ships Java 17 to end users in 1.20.1, so mods should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    // Specify the version of MinecraftForge to use.
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // y271727uy of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime' and a deobfuscating one called 'modLocalRuntime'
// These configurations should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime

    configureEach {
        resolutionStrategy.force 'net.jodah:typetools:0.6.3'
    }
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

dependencies {
    // If you wish to declare dependencies against mods, make sure to use the 'mod*' configurations so that they're remapped.
	// See https://github.com/neoforged/ModDevGradle/blob/main/LEGACY.md#remapping-mod-dependencies for more information.

    modImplementation("maven.modrinth:farmers-delight:1.20.1-1.2.7")
    modImplementation("maven.modrinth:jei:p7yZWpEg")
    modCompileOnly("maven.modrinth:geckolib:HVdLnQMI")
    modCompileOnly("maven.modrinth:manors-bounty:D0TALYL6")
    modImplementation("maven.modrinth:youkaishomecoming:yq57nNdE")
    modCompileOnly("maven.modrinth:lets-do-vinery:2I4cH49O")
    modImplementation("maven.modrinth:architectury-api:1MKTLiiG")
    modImplementation("maven.modrinth:kotlin-for-forge:Zsh14XeQ")
    modCompileOnly("maven.modrinth:lets-do-farm-charm:9fzY3YV6")
    modCompileOnly("maven.modrinth:vintage-delight:q8Ght7Bo")
    modImplementation("maven.modrinth:fruits-delight:qPyefm6m")
    //modImplementation("maven.modrinth:observable:QtSVNyjm")
    //modImplementation("maven.modrinth:spark:4FXHDE9F")
    //modImplementation("maven.modrinth::")
    modImplementation("maven.modrinth:citadel:lTAAe4sZ")
    modImplementation("curse.maven:untamedwilds-457252:4779746")
    modCompileOnly("curse.maven:mooncake-delight-1490740:7866540")
    modImplementation("maven.modrinth:modern-ui:3.12.0.1")
    modImplementation("maven.modrinth:mystiasizakaya:tDUctFCt")
    modCompileOnly("curse.maven:polymorph-388800:6450982")

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'it.unimi.dsi:fastutil:8.5.12'
    testImplementation 'org.spongepowered:mixin:0.8.5'

	
    // Example optional mod dependency with JEI
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    // modCompileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    // modCompileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
    // We add the full version to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
    // modLocalRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // modImplementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // modImplementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // modImplementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

def devMixinManifest = layout.buildDirectory.file('classes/java/main/META-INF/MANIFEST.MF')

tasks.register('syncDevMixinConfig', Copy) {
    dependsOn tasks.named('compileJava'), tasks.named('processResources')
    doFirst {
        devMixinManifest.get().asFile.delete()
    }
    from("src/main/resources/${mod_id}.mixins.json")
    from(layout.buildDirectory.file("mixin/${mod_id}.refmap.json"))
    into layout.buildDirectory.dir('classes/java/main')
}

[
        'prepareClientRun',
        'prepareServerRun',
        'prepareDataRun',
        'prepareGameTestServerRun'
].each { taskName ->
    tasks.named(taskName) {
        dependsOn tasks.named('syncDevMixinConfig')
    }
}

jar {
    def mixinConfigFile = "${project.mod_id}.mixins.json".toString()
    def refmapFile = "${project.mod_id}.refmap.json".toString()

    manifest.attributes([
            "MixinConfigs": mixinConfigFile
    ])
    filesMatching([mixinConfigFile, refmapFile]) {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
    from('third_party/Fast-Recipe-Search-LICENSE.txt') {
        into 'META-INF/licenses'
        rename { 'RecipeSearch-LICENSE.txt' }
    }
    from('third_party/RecipeSearch-NOTICE.txt') {
        into 'META-INF'
    }
}

// Uncomment the lines below if you wish to configure mixin. The mixin file should be named modid.mixins.json.
/*
mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json"
    ])
}
*/

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version        : minecraft_version,
            minecraft_version_range  : minecraft_version_range,
            forge_version            : forge_version,
            forge_version_range      : forge_version_range,
            loader_version_range     : loader_version_range,
            mod_id                   : mod_id,
            mod_name                 : mod_name,
            mod_license              : mod_license,
            mod_version              : mod_version,
            mod_authors              : mod_authors,
            mod_description          : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
legacyForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
